--- a/Project 01/css/style.css
+++ b/Project 01/css/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Inspiration&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inspiration&family=Poppins:wght@300;400;500;600;700&display=swap');
 
 *{
     margin: 0;
     padding: 0;
-    font-family: "Poppins", serif;
+    font-family: "Poppins", sans-serif;
 }
 
 body{
@@ -13,8 +13,14 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background: linear-gradient(rgba(0,0,0,0,5),rgba(0,0,0,0,5));
+    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url('../images/newyear_img.jpg');
+    background-repeat: no-repeat;
+    background-position: center;
+    background-attachment: 100% 100%
+    ;
     color: white;
+    background-size: cover;
+    background-position: center;
 }
 
 .counter{
@@ -22,4 +28,77 @@ body{
     justify-content: center;
     align-items: center;
     margin-top: 30px;
+    gap: 10px;
+}
+
+p{
+    font-size: 13px;
+}
+
+.newyear{
+    font-family: "Inspiration",cursive;
+    font-size: 50px;
+    font-weight: 400;
+    margin-top: 30px;
+}
+
+.box{
+    width: 50px;
+    height: 50px;
+    text-align: center;
+}
+
+.box h2{
+    font-size: 20px;
+    font-weight: 500;
+}
+
+.box small{
+    font-size: 10px;
+}
+
+@media (min-width:576px) {
+    .newyear{
+        font-size: 100px;
+    }
+
+    p{
+        font-size: 18px;
+    }
+
+    .box h2{
+        font-size: 30px;
+    }
+
+    .box{
+        width: 70px;
+        height: 70px;
+    }
+
+    .box small{
+        font-size: 15px;
+    }
+}
+
+@media (min-width:768px) {
+    .newyear{
+        font-size: 150px;
+    }
+
+    p{
+        font-size: 25px;
+    }
+
+    .box h2{
+        font-size: 50px;
+    }
+
+    .box{
+        width: 100px;
+        height: 100px;
+    }
+
+    .box small{
+        font-size: 20px;
+    }
 }
